chapter-1/cluster-hardening/1-networkpolicies/deployment.yaml
# Create a namespace to work in first
# k create ns ewonda
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ewonda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
