chapter-1/cluster-hardening/1-networkpolicies/default-deny-all.yaml
# Locking down network access and only allowing necessary access using networkpolicies
# this policy denies all access in and out of the of the namespace ewonda
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namesapce: ewonda
spec:
  podSelector: {} # empty podSelector makes sure all pods in the ns are covered
  policyTypes:
    - Ingress # incomeing traffic
    - Egress # outgoing traffic
